# Time-Balance

./: README.md  iv.yaml  pyproject.toml
Documentacion/: documentacion.txt
docs/: herramientas_test.md  pharmacy_receipt_1.txt  pharmacy_receipt_2.txt
medication_management/: inventario.py  medicamento.py  ticket.py
test/: test_inventario.py  test_medicamento.py  test_ticket.py
