[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "medication_management"
version = "0.1.0"
description = "Sistema di gestione dei medicinali"
authors = ["Matteo Imbrosciano <matteo.imbrosciano16@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.0"
python-dateutil = "^2.9.0.post0"
babel = "^2.16.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.31.1"
pytest = "^7.0" 

[tool.poe.tasks]
install = "poetry install"
check = "python -m py_compile medication_management/*.py"
test = "pytest --maxfail=5 --disable-warnings --tb=short test/"
